build out shop page with info modals.  Cart Buttons do nothing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -68,9 +68,11 @@
             </div>
         </div>
         <div class="row mx-auto">
-            <p>That's me, Sean McNair, sitting atop my local Philadelphia crag thinking about lifes great questions, like how do I untie this knot.</p>
-            <p>Born in New Jersey, I got into climbing a bit late, but the bug bit me none the less, and now I try to get out whenever I can</p>
-            <p>I'm tracking all of my gumby knowledge here, so all can learn from my mistakes, and have the best times  </p>
+            <div class="col d-flex flex-column justify-content-center">
+                <p>That's me, Sean McNair, sitting atop my local Philadelphia crag thinking about lifes great questions, like how do I untie this knot.</p>
+                <p>Born in New Jersey, I got into climbing a bit late, but the bug bit me none the less, and now I try to get out whenever I can</p>
+                <p>I'm tracking all of my gumby knowledge here, so all can learn from my mistakes, and have the best times  </p>
+            </div>
         </div>
     </div>
         <!-- ****************Footer here with all your normal footer links*****************-->
