--- a/crags.html
+++ b/crags.html
@@ -56,6 +56,7 @@
             </div>
         </div>
     </nav>
+    <div class="main">
     <div class="container pb-2">
         <div class="row row-conent">
             <div class="col">
@@ -146,6 +147,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
         <!-- ****************Footer here with all your normal footer links*****************-->
