--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     
     <!-- ****************Footer here with all your normal footer links*****************-->
-    <footer class="site-footer">
+    <footer class="site-footer container-fluid">
         <!-- Internal Site Links here-->
         <div class="container">
             <div class="row">
