--- a/shop.html
+++ b/shop.html
@@ -57,13 +57,169 @@
             </div>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mx-auto mb-2">
         <div class="row">
             <div class="col">
-                
+                <h3 class="mt-2"><u>Climber Made</u></h3>
+                <h6 class="ml-3">Click on the product name for a breif description.</h6>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+                <div class="media m-1">
+                    <img src="img/Bonnie.jpg" width="100 px" alt="Placeholder">
+                    <div class="media-body ml-2">
+                        <h5><a class="btn btn-dark" role="button" id="quickDrawSpecs">Quick Draws</a><button class="btn btn-info ml-3"> <i class="fa fa-cart-plus"></i></button></h5>
+                        <p>This would be where you would a breif product discription. Yada yada stick clip, trad crag gumby.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="quickDrawModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Quick Draw Specs</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p>These draws are made by hand, and are quick action and sturdy.</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <strong>Weight:</strong>
+                                    </div>
+                                    <div class="col">
+                                        5.3 oz
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+                <div class="media m-1">
+                    <img src="img/Bonnie.jpg" width="100 px" alt="Placeholder">
+                    <div class="media-body ml-2">
+                        <h5><a class="btn btn-dark " id="ropeRugSpecs">Rope Rug</a><button class="btn btn-info ml-3"><i class="fa fa-cart-plus"></i></button></h5>
+                        <p>This would be where you would a breif product discription. Yada yada stick clip, trad crag gumby.</p>
+                    </div>
+                </div>
+            </div>
+            <div id="ropeRugModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Rope Rug Specs</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p>Made from retired dynamic climbing rope, you get a soft springy feel, and the good feeling of giving an old rope a good home.</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <strong>Length:</strong>
+                                    </div>
+                                    <div class="col">
+                                        5 Feet
+                                    </div>
+                                    <div class="col-3">
+                                        <strong>Width:</strong>
+                                    </div>
+                                    <div class="col">
+                                        2 Feet
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+                <div class="media m-1">
+                    <img src="img/Bonnie.jpg" width="100 px" alt="Placeholder">
+                    <div class="media-body ml-2">
+                        <h5><a class="btn btn-dark" id="crackKeySpecs">Crack Key Holder</a><button class="btn btn-info ml-3"><i class="fa fa-cart-plus"></i></button></h5>
+                        <p>This would be where you would a breif product discription. Yada yada stick clip, trad crag gumby.</p> 
+                    </div>
+                </div>
+            </div>
+            <div id="crackKeyModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Crack Key Holder Specs</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p>Practice placing your gear and never lose your keys again.</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-3">
+                                        <strong>Weight:</strong>
+                                    </div>
+                                    <div class="col">
+                                        5 pounds
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+                <div class="media m-1">
+                    <img src="img/Bonnie.jpg" width="100 px" alt="Placeholder">
+                    <div class="media-body ml-2">
+                        <h5><a class="btn btn-dark" id="chalkBagSpecs">Chalk Bag</a><button class="btn btn-info ml-3"> <i class="fa fa-cart-plus"></i></button></h5>
+                        <p>This would be where you would a breif product discription. Yada yada stick clip, trad crag gumby.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div id="chalkBagModal" class="modal fade" role="dialog">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Chalk Bag Specs</h4>
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <p>Never have sweaty hands again with this bucket sized chalk bag perfect for bouldering.</p>
+                                    </div>
+                                    <div class="col-3">
+                                        <strong>Size:</strong>
+                                    </div>
+                                    <div class="col">
+                                        Bucket
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    
+
         <!-- ****************Footer here with all your normal footer links*****************-->
         <footer class="site-footer">
             <!-- Internal Site Links here-->
@@ -109,5 +265,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/shopScript.js"></script>
 </body>
+
 </html>
