--- a/obed.html
+++ b/obed.html
@@ -55,7 +55,7 @@
     </nav>
 
     <div>
-        <div class="container pb-2">
+        <div class="container py-2">
             <div class="row">
                 <div class="col">
                     <h3>Obed, TN</h3>
